2008-05-11 mentaer <sstein@geo.unizh.ch>
      Added patch from Jakko which allows use of WMS servers protected 
      with basic HTTP authentication. Credentials are taken from URL, 
      which can be entered as 'http://user:password@server/path'
      changed
      com.vividsolutions.wms.MapRequest
      com.vividsolutions.wms.WMService

2008-05-11 mentaer <sstein@geo.unizh.ch>
      Added new function to intersect two layers that contain
      polygons under /Tools/Analysis/. The function allows in
      a second step to transfer the attributes from both
      source layers.
      Added:
      org.openjump.core.geomutils.algorithm.IntersectGeometries
      org.openjump.core.ui.plugin.tools.IntersectPolygonLayersPlugIn
      
2008-05-08 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/StyleChooserPanel.java,
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Styles can now be chosen upon loading. Work on color theming styles is left to do, Labels work.

2008-05-07 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/swing/SelectFromListPanel.java,
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/org/openjump/util/XPathUtils.java:
      Started reworking the SLD import. Only simple (Basic-) styles can currently be imported.

2008-05-03 mentaer <sstein@geo.unizh.ch>
	  enabled loading of Mr.SID layers using the new OpenFramework
	  (note: problems exist with deleting the temp-jpg-files in
	  MrSIDReferencedImage.paint)
	  com.vividsolutions.jump.workbench.imagery.mrsid.MrSIDReferencedImage
	  com.vividsolutions.jump.workbench.imagery.mrsid.MrSIDImageFactory
	  
2008-05-03 mentaer <sstein@geo.unizh.ch>
	  changes to enable the loading of Mr.SID layers using AddSIDLayerPlugin
	  but also enabling of zooming
	  org.openjump.core.ui.plugin.layer.AddSIDLayerPlugIn